WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273889
Fix event handling conflicts between webkit fullscreen controls and fullscreen controls of youtube.com and vimeo.com
https://bugs.webkit.org/show_bug.cgi?id=273889
Summary
Fix event handling conflicts between webkit fullscreen controls and fullscree...
Dana Estra
Reported
2024-05-08 11:39:12 PDT
Fix event handling conflicts between webkit fullscreen controls and fullscreen controls of youtube.com and vimeo.com
Attachments
Add attachment
proposed patch, testcase, etc.
Dana Estra
Comment 1
2024-05-08 11:40:28 PDT
<
rdar://problem/126728057
>
Dana Estra
Comment 2
2024-05-08 12:08:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28300
EWS
Comment 3
2024-05-09 10:26:07 PDT
Committed
278573@main
(9e2aadd3a06e): <
https://commits.webkit.org/278573@main
> Reviewed commits have been landed. Closing PR #28300 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug