Source/WebCore/Modules/modern-media-controls/media/media-controller.js
@@ -57,6 +57,8 @@ class MediaController
 
         media.addEventListener("play", this);
         media.addEventListener(this.fullscreenChangeEventType, this);
+        media.addEventListener("keydown", this);
+        media.addEventListener("keyup", this);
 
         window.addEventListener("keydown", this);
 
@@ -206,14 +208,21 @@ class MediaController
             this._updateControlsIfNeeded();
             // We must immediately perform layouts so that we don't lag behind the media layout size.
             scheduler.flushScheduledLayoutCallbacks();
-        } else if (event.currentTarget === this.media) {
+        } else if (event.type === "keydown" && this.isFullscreen && event.key === " ") {
+            this.togglePlayback();
+            event.preventDefault();
+            event.stopPropagation();
+        }
+        else if (event.type === "keyup" && this.isFullscreen && event.key === " ") {
+            event.preventDefault();
+            event.stopPropagation();
+        }
+
+        if (event.currentTarget === this.media) {
             if (event.type === "play")
                 this.hasPlayed = true;
             this._updateControlsIfNeeded();
             this._updateControlsAvailability();
-        } else if (event.type === "keydown" && this.isFullscreen && event.key === " ") {
-            this.togglePlayback();
-            event.preventDefault();
         }
     }
 
